--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
                 <span class="bi bi-calendar4-week"></span>
               </div>
               <div class="card-title-c align-self-center">
-                <h2 class="title-c">Property Rentals</h2>
+                <h2 class="title-c">Rentals</h2>
               </div>
             </div>
             <div class="card-body-c">
@@ -116,7 +116,7 @@
                 <span class="bi bi-card-checklist"></span>
               </div>
               <div class="card-title-c align-self-center">
-                <h2 class="title-c">Property Buying</h2>
+                <h2 class="title-c">Property Acquisition</h2>
               </div>
             </div>
             <div class="card-body-c">
