--- a/templates/layouts/base-fullscreen.html
+++ b/templates/layouts/base-fullscreen.html
@@ -18,7 +18,7 @@
   <link rel="canonical" href="https://appseed.us/admin-dashboards/flask-boilerplate-dashboard-argon">
   
   <title>
-    Flask Argon Dashboard - {% block title %} Open-Source Admin Panel {% endblock %} | AppSeed
+    Admin Dashboard - {% block title %} Admin Panel {% endblock %} | AppSeed
   </title>
 
   <link rel="icon" href="static/admin/static/assets/img/brand/favicon.png" type="image/png">
@@ -36,6 +36,8 @@
 </head>
 
 <body class="bg-default">
+  
+  
 
   <div class="main-content">
 
@@ -49,12 +51,9 @@
             <div class="col-lg-5 col-md-6">
               <h1 class="text-white">
                 <a target="_blank" class="text-white"
-                   href="https://appseed.us/admin-dashboards/flask-boilerplate-dashboard-argon">Flask Argon</a>
+                   href="#">Admin Panel</a>
               </h1>
-              <p class="text-lead text-light">
-                Open-Source Flask Starter with Argon Design 
-                Coded by <a target="_blank" class="text-white" href="https://appseed.us">AppSeed</a>.  
-              </p>
+             
             </div>
           </div>
         </div>
