--- a/templates/home/page-403.html
+++ b/templates/home/page-403.html
@@ -19,23 +19,12 @@
               </div>
 
               <div class="text-center mb-4">
-                Access denied - Please authenticate <a href="/login.html">Login</a>
+                Access denied - Please authenticate <a href="{{ url_for('login') }}">Login</a>
               </div>
 
             </div>
           </div>
-          <div class="row mt-3">
-            <div class="col-6">
-              <a href="/" class="text-light"><small>Home</small></a>
-            </div>          
-            <div class="col-6">
-              <a href="/" class="text-light"><small>Home</small></a>
-            </div>
-            <div class="col-6 text-right">
-              <a target="_blank" 
-                 href="https://appseed.us/support" class="text-light"><small>Get Support</small></a>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
