--- a/templates/home/tables.html
+++ b/templates/home/tables.html
@@ -1,6 +1,8 @@
 {% extends 'layouts/base.html' %}
 
+
 {% block title %} Tables {% endblock title %}
+
 
 {% block content %}
 
@@ -27,6 +29,7 @@
     </div>
   </div>
   
+  
   <!-- Page content -->
   <div class="container-fluid mt--6">
     <div class="row">
@@ -35,7 +38,28 @@
           <!-- Card header -->
           <div class="card-header border-0">
             <h3 class="mb-0">All Properties</h3>
+            <div class="row">
+              <div class="col-lg-12">
+                  <p>
+                      {% with messages = get_flashed_messages() %}
+                      {% if messages %}
+                      {% for message in messages %}
+                  <div class="alert alert-success" id="flash-message">
+                      <strong>{{ message }}</strong>
+                  </div>
+                  <script>
+                      setTimeout(function () {
+                          document.getElementById("flash-message").style.display = "none";
+                      }, 2000);
+                  </script>
+                  {% endfor %}
+                  {% endif %}
+                  {% endwith %}
+                  </p>
+              </div>
+            </div>
           </div>
+
           <!-- Light table -->
           <div class="table-responsive">
             <table class="table align-items-center table-flush">
@@ -104,7 +128,7 @@
 
 
                       <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                        <a class="dropdown-item" href="#" style="color: red;">Delete</a>
+                        <a class="dropdown-item" href="{{ url_for('delete_property', id=property.id) }}" style="color: red;">Delete</a>
                         
                         <a class="dropdown-item" href="#">Edit</a>
                       </div>
