--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,16 +3,13 @@
       <footer class="footer">
         <div class="row align-items-center justify-content-xl-between">
           <div class="col-xl-6">
-            <div class="text-center text-xl-left text-muted">
-              <a href="https://www.creative-tim.com/templates/flask" 
-                 class="font-weight-bold ml-1" target="_blank">More Dashboards</a>
-            </div>
+            
           </div>
           <div class="col-xl-6">
             <div class="text-center text-xl-right text-muted">
-              <a href="https://www.creative-tim.com" 
-                 class="font-weight-bold ml-1" target="_blank"> &copy; Creative-Tim</a> 
-                 - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>
+              <a href="#" 
+                 class="font-weight-bold ml-1" target="_blank"> &copy; Wayne</a> 
+                 - coded by <a target="_blank" href="#">Nex</a>
             </div>
           </div>
         </div>
