--- a/templates/agents-grid.html
+++ b/templates/agents-grid.html
@@ -36,13 +36,13 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="static/assets/img/agent-4.jpg" alt="" class="img-d img-fluid">
+                <img src="static/assets/img/noa.jpeg" alt="" class="img-d img-fluid">
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
                   <div class="card-title-d align-self-center">
                     <h3 class="title-d">
-                      <a href="#" class="link-two">Margaret Sotillo
+                      <a href="#" class="link-two">Noah Albert
                         <br> Escala</a>
                     </h3>
                   </div>
