--- a/templates/base.html
+++ b/templates/base.html
@@ -160,7 +160,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link {% if active_page == 'agent' %}active{% endif %}" href="{{ url_for('agent') }}">Agents</a>
+                        <a class="nav-link {% if active_page == 'agent' %}active{% endif %}" href="#">Agents</a>
                     </li>
 
                 
@@ -204,10 +204,10 @@
                             <div class="w-footer-a">
                                 <ul class="list-unstyled">
                                     <li class="color-a">
-                                        <span class="color-text-a">Phone .</span> contact@example.com
+                                        <span class="color-text-a">Email</span> walterpropertiesrealtor@gmail.com
                                     </li>
                                     <li class="color-a">
-                                        <span class="color-text-a">Email .</span> +54 356 945234
+                                        <span class="color-text-a">Linkedin</span> WalterProperties
                                     </li>
                                 </ul>
                             </div>
@@ -331,7 +331,7 @@
                         </div>
                         <div class="credits">
 
-                            Designed by <a href="https://bootstrapmade.com/">Nex</a>
+                            Designed by <a href="#">Nex</a>
                         </div>
                     </div>
                 </div>
