--- a/templates/index.html
+++ b/templates/index.html
@@ -227,7 +227,7 @@
               <h2 class="title-a">Best Agents</h2>
             </div>
             <div class="title-link">
-              <a href="{{ url_for('agent') }}">All Agents
+              <a href="#">All Agents
                 <span class="bi bi-chevron-right"></span>
               </a>
             </div>
@@ -244,7 +244,7 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="{{ url_for('view_agent') }}" class="link-two">Noah Albert
+                    <a href="#" class="link-two">Noah Albert
                       <!-- <br> Escala</a> -->
                   </h3>
                 </div>
@@ -302,7 +302,7 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="{{ url_for('view_agent') }}" class="link-two">Steven Diego
+                    <a href="#" class="link-two">Steven Diego
                       <br> Darw</a>
                   </h3>
                 </div>
@@ -357,8 +357,8 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="{{ url_for('view_agent') }}" class="link-two">Luca Romano
-                      <!-- <br> Cascada</a> -->
+                    <a href="#" class="link-two">Luca Romano
+                      <!-- <br> Cascada   {{ url_for('view_agent') }} </a> -->
                   </h3>
                 </div>
               </div>
@@ -601,7 +601,7 @@
                   </div>
                   <div class="testimonial-author-box">
                     <img src="static/assets/img/mini-testimonial-2.jpg" alt="" class="testimonial-avatar">
-                    <h5 class="testimonial-author">Lucas & Emma</h5>
+                    <h5 class="testimonial-author">Chris & Emma</h5>
                   </div>
                 </div>
               </div>
