--- a/templates/base.html
+++ b/templates/base.html
@@ -206,9 +206,9 @@
                                     <li class="color-a">
                                         <span class="color-text-a">Email</span> walterpropertiesrealtor@gmail.com
                                     </li>
-                                    <li class="color-a">
+                                    <!-- <li class="color-a">
                                         <span class="color-text-a">Linkedin</span> WalterProperties
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
