--- a/templates/index.html
+++ b/templates/index.html
@@ -296,14 +296,14 @@
         <div class="col-md-4">
           <div class="card-box-d">
             <div class="card-img-d">
-              <img src="static/assets/img/agent-1.jpg" alt="" class="img-d img-fluid">
+              <img src="static/assets/img/ala.jpeg" alt="" class="img-d img-fluid">
             </div>
             <div class="card-overlay card-overlay-hover">
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="#" class="link-two">Steven Diego
-                      <br> Darw</a>
+                    <a href="#" class="link-two">Steven McGregor
+                      <!-- <br> Darw</a> -->
                   </h3>
                 </div>
               </div>
