--- a/templates/property-single.html
+++ b/templates/property-single.html
@@ -66,7 +66,7 @@
                 <div class="card-header-c d-flex">
                   <div class="card-box-ico">
                     <div class="card-title-c align-self-center" style="margin: 15%;">
-                      <h5 class="title-c"> ${{ property_data.price }} </h5>
+                      <h5 class="title-c"> £{{ property_data.price }} </h5>
                     </div>
                   </div>
 
