--- a/templates/property-single.html
+++ b/templates/property-single.html
@@ -66,8 +66,9 @@
                 <div class="card-header-c d-flex">
                   <div class="card-box-ico">
                     <div class="card-title-c align-self-center" style="margin: 15%;">
-                      <h5 class="title-c"> £{{ property_data.price }} </h5>
-                    </div>
+                      <p class="title-c" style="font-size: 1.3rem; margin: 0;">
+                        Booking Rate: £{{ property_data.price }} / day
+                      </p>                    </div>
                   </div>
 
                 </div>
@@ -263,6 +264,7 @@
           </div>
         </div>
       </div>
+      
     </div>
   </section><!-- End Property Single-->
   <script>
