--- a/templates/rent-grid.html
+++ b/templates/rent-grid.html
@@ -59,7 +59,7 @@
                   </div>
                   <div class="card-body-a">
                     <div class="price-box d-flex">
-                      <span class="price-a">For Rent | ${{ property.price }}</span>
+                      <span class="price-a">For Rent | £{{ property.price }}</span>
                     </div>
                     <a href="{{ url_for('view_property', property_id=property.id) }}" class="link-a">Click here to view
                       <span class="bi bi-chevron-right"></span>
