--- a/templates/payment_bank.html
+++ b/templates/payment_bank.html
@@ -105,10 +105,10 @@
             />
           </div>
           <div class="alert alert-light border mb-4">
-            <strong>Bank Name:</strong> C24 Bank <br>
-            <strong>Account Name:</strong> Lara Yücel<br>
-            <strong>IBAN:</strong> DE83500240243153575001<br>
-            <strong>BIC:</strong> DEFFDEFFXXX<br>
+            <strong>Bank Name:</strong>  Bank <br>
+            <strong>Account Name:</strong> john doe<br>
+            <strong>IBAN:</strong> 00000000000000000000<br>
+            <strong>BIC:</strong> 43333333333333<br>
             <strong>Reference:</strong><span id="" class="text-primary" style="font-family: monospace;"> Yucel </span>
           </div>
 
