--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                     <br> {{ property.address }}
                   </h1>
                   <p class="intro-subtitle intro-price">
-                    <a href="{{ url_for('buy_property') }}"><span class="price-a">For Sale | £{{ property.price
+                    <a href="{{ url_for('buy_property') }}"><span class="price-a">For Sale | ${{ property.price
                         }}</span></a>
                   </p>
                 </div>
